tests/bad/11_missing_return.src
# Test: Missing return statement
int f() {
    int x = 42;
    # Missing return statement
}
